<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
   <item
        android:id="@+id/add_account"
        android:icon="@drawable/add"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_account"/>
   <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/setting"
        android:orderInCategory="101"
        android:showAsAction="ifRoom|withText"
        android:title="@string/setting"/>
    <item
        android:id="@+id/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_5_content_backspace"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/share"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/logout"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/exit"/>
   
</menu>
