<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   
    android:background="#FFFFFF"
    android:orientation="vertical" >

   
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="15dip" >
        <!-- 账号 -->

        <TextView
            android:id="@+id/lock_forget_login_user_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/lock_forget_login_label_username" />

        <EditText
            android:id="@+id/lock_forget_login_username_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lock_forget_login_user_label"
            android:hint="@string/login_label_username_hint"
            android:inputType="text"
            android:singleLine="true" />
        
        <!-- 密码 text -->

        <TextView
            android:id="@+id/lock_forget_login_password_label"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lock_forget_login_username_input"
            android:layout_marginTop="3dp"
            android:text="@string/lock_forget_login_label_password" />

        <EditText
            android:id="@+id/lock_forget_login_password_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lock_forget_login_password_label"
            android:inputType="textPassword"
            android:singleLine="true" />

        <!-- 登录button -->

		<TextView
            android:id="@+id/clear_lock_by_unlock_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/clear_lock_by_unlock_link"
            android:textColor="#888"
            android:textColorLink="#FF0066CC" />
        <Button
            android:id="@+id/lock_forget_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/lock_forget_login_password_input"
            android:layout_below="@id/lock_forget_login_password_input"
            android:text="@string/login_button_label" />
        
        <Button
            android:id="@+id/lock_forget_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/lock_forget_login_button"
            android:layout_below="@id/lock_forget_login_password_input"
            android:text="@string/lock_forget_login_button_label" />
    </RelativeLayout>

</LinearLayout>